--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-
 # DATABASE
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -6,3 +5,7 @@ spring.datasource.url=jdbc:h2:~/local
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+# JPA
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
