--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
       enabled: true
       path: /h2-console
   datasource:
-    url: jdbc:h2:~./jumb_to_springboot_01;MODE=MYSQL
+    url: jdbc:h2:./jumb_to_springboot_01;MODE=MYSQL
     driverClassName: org.h2.Driver
     username: sa
     password: ''
